[gd_scene load_steps=22 format=2]

[ext_resource path="res://src/Enemy/Base/EnemyBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Tiles/tile_0010.png" type="Texture" id=2]
[ext_resource path="res://assets/Particles/circle_01.png" type="Texture" id=3]
[ext_resource path="res://src/Enemy/Skelly/Skelly.gd" type="Script" id=4]
[ext_resource path="res://src/Enemy/Skelly/JumpAttackAction.gd" type="Script" id=9]
[ext_resource path="res://assets/Particles/circle_05.png" type="Texture" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 12.7959

[sub_resource type="Animation" id=2]
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.3 ), Vector2( 1, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Brain/Actions/JumpAttackAction/Shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.06, 0.03 ), Vector2( 0.1, 0.05 ), Vector2( 0.06, 0.03 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.131356, 0.402542, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 1, 1, 1, 0.737255, 0.901961, 0.901961, 0.901961, 0.658824, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 134.549 ), 0.0, 0.0, 0, 0, Vector2( 0.238462, -200 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0.00384615, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.334615, 0.487838 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 2
emission_box_extents = Vector3( 3, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, -5, 0 )
initial_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel_curve = SubResource( 6 )
scale_curve = SubResource( 8 )
color_ramp = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=10]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.2
scale_curve = SubResource( 8 )
color_ramp = SubResource( 4 )

[sub_resource type="CircleShape2D" id=11]

[sub_resource type="Shader" id=12]
code = "shader_type canvas_item;

uniform bool active = false;
uniform vec4 color = vec4(1, 1, 1, 1);

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	vec4 new_color = vec4(color.r, color.g, color.b, previous_color.a);
	if (active) {
		COLOR = new_color;
	} else {
		COLOR = previous_color
	}
}"

[sub_resource type="ShaderMaterial" id=13]
resource_local_to_scene = true
shader = SubResource( 12 )
shader_param/active = false
shader_param/color = Plane( 1, 1, 1, 1 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( -1, -4, 1, -4, 1, -2, 3, -2, 3, -1, 4, -1, 4, 2, 2, 2, 2, 4, 1, 4, -2, 4, -2, 2, -4, 2, -4, -1, -3, -1, -3, -2, -1, -2 )

[sub_resource type="CapsuleShape2D" id=15]
radius = 5.0
height = 10.0

[node name="Skelly" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Brain/Sensors/AttackRadius" index="0"]
visible = false
position = Vector2( 0, 24 )
scale = Vector2( 3, 3 )
shape = SubResource( 1 )

[node name="JumpAttackAction" type="Node2D" parent="Brain/Actions" index="0"]
script = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Brain/Actions/JumpAttackAction" index="0"]
root_node = NodePath("../../../../Character")
anims/SkeletonJumpAttack = SubResource( 2 )

[node name="Shadow" type="Sprite" parent="Brain/Actions/JumpAttackAction" index="1"]
modulate = Color( 0.258824, 0.258824, 0.258824, 0.941176 )
position = Vector2( 0, 8 )
scale = Vector2( 0.06, 0.03 )
z_index = 5
z_as_relative = false
texture = ExtResource( 10 )

[node name="AttackParticles" type="Particles2D" parent="Brain/Actions/JumpAttackAction" index="2"]
position = Vector2( 0, 8 )
scale = Vector2( 3, 3 )
z_index = 5
z_as_relative = false
emitting = false
amount = 40
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 9 )

[node name="AttackParticles2" type="Particles2D" parent="Brain/Actions/JumpAttackAction" index="3"]
position = Vector2( 0, 8 )
z_index = 5
z_as_relative = false
emitting = false
amount = 1
lifetime = 0.5
one_shot = true
local_coords = false
process_material = SubResource( 10 )
texture = ExtResource( 3 )

[node name="LandingAOE" type="Area2D" parent="Brain/Actions/JumpAttackAction" index="4"]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Brain/Actions/JumpAttackAction/LandingAOE" index="0"]
position = Vector2( 0, 8 )
rotation = 1.5708
scale = Vector2( 1, 2 )
shape = SubResource( 11 )

[node name="CharacterBody" parent="Character" index="1"]
modulate = Color( 1, 1, 1, 1 )
material = SubResource( 13 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Character/CharacterBody" index="0"]
use_parent_material = true
position = Vector2( 0, -4 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Character/CharacterBody" index="1"]
position = Vector2( 0, -4 )
scale = Vector2( 3, 3 )
shape = SubResource( 14 )

[node name="MoveShape" type="CollisionShape2D" parent="." index="3"]
modulate = Color( 1, 1, 1, 0.541176 )
position = Vector2( 0, 8 )
rotation = 1.5708
shape = SubResource( 15 )
